kodekloud/mock-exams/exam-1/q13/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deloyment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
